# MyNote

./: Ijkplayer在Android上的简单使用.md  README.md  grafika.txt  note.txt
MediaLearn/app/: build.gradle
MediaLearn/app/src/androidTest/java/com/example/medialearn/: ExampleInstrumentedTest.java
MediaLearn/app/src/main/: AndroidManifest.xml
MediaLearn/app/src/main/java/com/example/medialearn/: CameraRecordActivity.java  CameraUtils.java  Constans.java  GeneratedMovieTask.java  LivePush.java  MainActivity.java  NativeEGLActivity.java
MediaLearn/app/src/main/java/com/example/medialearn/camera1_demo/: Camera1DemoAty.java  CameraHelp.java
MediaLearn/app/src/main/java/com/example/medialearn/camera_help/: CameraUtils.java
MediaLearn/app/src/main/jni/: CMakeLists.txt  native-lib.cpp
MediaLearn/app/src/main/jni/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  GLRender.cpp  GLRender.h  GLUtils.cpp  GLUtils.h  OffscreenSurface.cpp  OffscreenSurface.h  Triangle.cpp  Triangle.h  WindowSurface.cpp  WindowSurface.h
MediaLearn/app/src/main/jni/native_looper/: Looper.cpp  Looper.h
MediaLearn/app/src/main/jni/test_livepush/: NativeLivePush.cpp  PushPacketQueue.cpp  PushPacketQueue.h  RTMPPush.cpp  RTMPPush.h  com_example_medialearn_LivePush.h
MediaLearn/app/src/main/jni/utils/: AndroidLogUtil.h
MediaLearn/app/src/main/res/layout/: activity_camera1_demo.xml  activity_camera_record.xml  activity_main.xml  activity_native_egl.xml  activity_push.xml
MediaLearn/app/src/main/res/raw/: fragment_shader_fbo.glsl  vertex_shader_fbo.glsl
MediaLearn/app/src/test/java/com/example/medialearn/: ExampleUnitTest.java
MediaLearn/gradle/wrapper/: gradle-wrapper.properties
mywiki/: index.html
(+14 files in other folders)
